# pybindings

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  hot_reload.py  main.cpp  vcpkg.json
.circleci/: config.yml
.github/workflows/: clang-format-check.yml  clang-tidy.yml
ab_py_calculator/: README.md  __init__.py  ab_calculator.pyi  build.sh  example.py  pyproject.toml
ab_py_calculator/tests/: test_calculator.py
docs/: README.md
scripts/: format-code.cmd  format-code.sh  generate_coverage.sh  generate_docs.sh
src/calculator/: CMakeLists.txt  Calculator.cpp  py_Calculator.cpp
src/calculator/include/ab/calculator/: Calculator.h
src/calculator/tests/: test_calculator.cpp
src/logger/: CMakeLists.txt  Logger.cpp
src/logger/include/ab/logger/: Logger.h
src/logger/tests/: test_logger.cpp
src/notifier/: CMakeLists.txt  Notifier.cpp
src/notifier/include/ab/notifier/: Notifier.h
src/notifier/tests/: test_notifier.cpp
tests/e2e/: test_e2e.cpp
tests/integration/: test_calculator_logger.cpp  test_logger_notifier.cpp
